--- a/sass/3-modules/_modules-mixins.sass
+++ b/sass/3-modules/_modules-mixins.sass
@@ -1,7 +1,10 @@
-@use '../1-base/variables'
-    
+@use '../1-base/variables'   
+
 @mixin border-bottom
     border-bottom: 1px solid variables.$light-color
+
+@mixin border-top
+    border-top: 1px solid variables.$primary-color
 
 @mixin navbar-center
     display: flex
