create-gallery-section

--- a/sass/2-layouts/_navbar.sass
+++ b/sass/2-layouts/_navbar.sass
@@ -13,7 +13,7 @@
         padding: map-get(variables.$spacings, "medium") map-get(variables.$spacings, "small")
 
         @include media-queries.tablet
-            padding: map-get(variables.$spacings, "medium")
+            padding: map-get(variables.$spacings, "medium") 34px map-get(variables.$spacings, "medium") 38px
 
         @include media-queries.desktop
             padding: map-get(variables.$spacings, "medium") 100px         
@@ -51,7 +51,7 @@
         padding-left: map-get(variables.$spacings, "small")
 
         @include media-queries.tablet
-            padding-left: map-get(variables.$spacings, "medium")
+            padding-left: 38px
         
         @include media-queries.desktop
             display: flex
